# mini-sistema-api

./: .gitignore  LICENSE  README.md  pyproject.toml
crud_api/: app.py  configuracoes.py
crud_api/src/: gerenciador_api.py  menu_api.py  requisicoes_api.py  servico_albuns.py  servico_comments.py  servico_photos.py  servico_post.py  servico_todos.py  servico_users.py
